[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.34", default-features = false }
esp-idf-hal = { version = "0.43", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
embedded-svc = { version = "0.27", default-features = false }
#device = { git = "https://github.com/vancolleague/device.git" }
device = { path = "../device" }
heapless = "0.8.0"
serde_json = "1.0.106"
querystring = "1.1.0"
uuid = { version = "1.7.0", features = ["serde"] }
